crates/wac-parser/tests/parser/fail/empty-variant.wac
package test:comp;

variant v {}